<resources>
    <string name="app_name">Diabetes Management</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="prompt_user_name">User Name</string>
    <string name="log_out_button">Log Out</string>
    <string name="label_next">NEXT</string>
    <string name="label_back">BACK</string>
    <string name="label_finish">FINISH</string>
    <string name="sign_up_tab_1">STEP 1</string>
    <string name="sign_up_tab_2">STEP 2</string>
    <string name="sign_up_tab_3">FINISH</string>
    <string name="label_follower">FOLLOWER</string>
    <string name="label_teen">TEEN</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_second_name">Second Name</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_birth_date">Date of Birth</string>
    <string name="prompt_password2">Re-enter Password</string>
    <string name="prompt_mrn">Medical Record Number</string>
    <string name="login_error">"Login error: "</string>
    <string name="enter_username">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="enter_birth_date">Enter date of birth</string>
    <string name="enter_mrn">Enter medical record number</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password2">Re-enter your password</string>
    <string name="passwords_incorrect">Passwords don\'t match</string>
    <string name="sign_up_error">Sign Up error:</string>
    <string name="error_null_http_client">HTTP client null</string>
    <string name="prompt_loading">Loading...</string>
    <string name="prompt_please_wait">Please, wait.</string>
    <string name="account_created">New account created</string>
    <string name="logout_error">"Logout error: "</string>

    <string name="title_check_in">"Check-In"</string>
    <string name="title_feedback">"Feedback"</string>
    <string name="title_followers">"Followers"</string>
    <string name="title_following">"Following"</string>
    <string name="title_messages">"Messages"</string>
    <string name="title_reminders">"Reminders"</string>

    <string-array name="option_titles_teen">
        <item>@string/title_feedback</item>
        <item>@string/title_followers</item>
        <item>@string/title_following</item>
        <!--<item>@string/title_messages</item>--> <!--No time to implement this-->
        <item>@string/title_reminders</item>
    </string-array>

    <string-array name="option_titles_follower">
        <item>@string/title_feedback</item>
        <item>@string/title_following</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="sugar_level_text">Sugar level</string>
    <string name="at_text">at</string>
    <string name="meal_text">Meal prior to the measurement:</string>
    <string name="insulin_administered_text">Insulin had been administered at</string>
    <string name="dosage_text">with the dosage of</string>
    <string name="major_data_label">Major Data</string>
    <string name="insulin_units_text">units</string>
    <string name="minor_data_label">Minor Data</string>
    <string name="mood_text">Mood level</string>
    <string name="stress_text">Stress level</string>
    <string name="energy_text">Energy level</string>
    <string name="submit_label">Submit</string>
    <string name="measurement_time_label">Measurement Time</string>
    <string name="meal_time_label">Meal Time</string>
    <string name="insulin_adm_time_label">Insulin Administration Time</string>
    <string name="error_need_required_data">You must provide all major info</string>
    <string name="check_in_error">Check-In failed: </string>
    <string name="check_in_submitted">Check-In data submitted</string>
    <string name="error_user_list">Error retrieving user list: </string>
    <string name="invite">Invite</string>
    <string name="check_in_button">Check-In</string>
    <string name="follow">Follow</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="reminder_edit">Edit reminder</string>
    <string name="reminder_delete">Delete reminder</string>
    <string name="reminder_limit">At least 3 reminders should be active</string>
    <string name="user_settings_label">User Settings</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="error_follow">"Follow request error: "</string>
    <string name="success_follow">Follow request sent</string>
    <string name="success_invite">Invite sent</string>
    <string name="error_follower_request">"Error sending follower request: "</string>
    <string name="delete">Delete</string>
    <string name="request_accepted">Request accepted</string>
    <string name="follower_deleted">Follower deleted</string>
    <string name="settings_changed">Settings changed</string>
    <string name="following_deleted">Following deleted</string>
    <string name="no_feedback_data">No data available for this teen</string>

    <string-array name="mood_spinner_items">
        <item>Good</item>
        <item>Normal</item>
        <item>Bad</item>
    </string-array>

    <string-array name="data_to_share_items">
        <item>@string/major_data_label</item>
        <item>@string/minor_data_label</item>
    </string-array>

</resources>
