<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_next"
        android:id="@+id/sign_up_tab_1_next_button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_tab_1_teen_button"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:minWidth="110dp"
        android:textOff="@string/label_teen"
        android:textOn="@string/label_teen" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_tab_1_follower_button"
        android:layout_marginEnd="45dp"
        android:layout_alignTop="@+id/sign_up_tab_1_teen_button"
        android:layout_alignEnd="@+id/sign_up_tab_1_next_button"
        android:minWidth="110dp"
        android:textOff="@string/label_follower"
        android:textOn="@string/label_follower" />

</RelativeLayout>