<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.00">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/sign_up_tab_2_mrn_edit_text"
                android:hint="@string/prompt_mrn"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="60dp" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_back"
            android:id="@+id/sign_up_tab_2_back_button"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_next"
            android:id="@+id/sign_up_tab_2_next_button"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
