<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acpcoursera.diabetesmanagment.ui.CheckInActivity">

    <ScrollView android:id="@+id/check_in_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_data_label"
                android:id="@+id/major_data_text_view"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugar_level_text"
                android:id="@+id/sugar_level_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/major_data_text_view"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/sugar_level_edit_text"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/sugar_level_text_view"
                android:layout_alignBottom="@+id/sugar_level_text_view"
                android:layout_marginBottom="-10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_text"
                android:id="@+id/at_text_view"
                android:layout_marginStart="20dp"
                android:layout_alignBottom="@+id/sugar_level_text_view"
                android:layout_toEndOf="@+id/sugar_level_edit_text" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/measurement_time_edit_text"
                android:layout_toEndOf="@+id/at_text_view"
                android:layout_alignBottom="@+id/sugar_level_edit_text"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:focusable="false"
                android:tag="@string/measurement_time_label"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:id="@+id/check_in_separator_1"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/sugar_level_text_view"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_text"
                android:id="@+id/meal_text_view"
                android:layout_below="@+id/check_in_separator_1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/meal_edit_text"
                android:layout_below="@+id/meal_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_text"
                android:id="@+id/at_2_text_view"
                android:layout_below="@+id/meal_edit_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/meal_time_edit_text"
                android:layout_toEndOf="@+id/at_2_text_view"
                android:layout_alignBottom="@+id/at_2_text_view"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="-10dp"
                android:textSize="14sp"
                android:focusable="false"
                android:tag="@string/meal_time_label"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:id="@+id/check_in_separator_2"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/at_2_text_view"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insulin_administered_text"
                android:id="@+id/insulin_administered_text_view"
                android:layout_below="@+id/check_in_separator_2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/insulin_administered_edit_text"
                android:layout_toEndOf="@+id/insulin_administered_text_view"
                android:layout_alignBottom="@+id/insulin_administered_text_view"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="-10dp"
                android:textSize="14sp"
                android:focusable="false"
                android:tag="@string/insulin_adm_time_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosage_text"
                android:id="@+id/dosage_text_view"
                android:layout_below="@+id/insulin_administered_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/dosage_edit_text"
                android:layout_toEndOf="@+id/dosage_text_view"
                android:layout_alignBottom="@+id/dosage_text_view"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="-10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insulin_units_text"
                android:layout_toEndOf="@+id/dosage_edit_text"
                android:layout_alignBottom="@+id/dosage_text_view"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/insulin_units_text_view" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:id="@+id/check_in_separator_3"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/dosage_text_view"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minor_data_label"
                android:id="@+id/minor_data_text_view"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_below="@+id/check_in_separator_3"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_text"
                android:id="@+id/mood_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/minor_data_text_view"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mood_number_picker"
                android:layout_alignStart="@+id/mood_text_view"
                android:layout_below="@+id/mood_text_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_text"
                android:id="@+id/stress_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/minor_data_text_view"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stress_number_picker"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/stress_text_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energy_text"
                android:id="@+id/energy_text_view"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/minor_data_text_view"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/energy_number_picker"
                android:layout_alignStart="@+id/energy_text_view"
                android:layout_below="@+id/energy_text_view" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:id="@+id/check_in_separator_4"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/stress_number_picker"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Who were you with when you checked your blood sugar?"
                android:id="@+id/who_text_view"
                android:layout_below="@+id/check_in_separator_4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/who_edit_text"
                android:layout_below="@+id/who_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Where were you when you checked your blood sugar?"
                android:id="@+id/where_text_view"
                android:layout_below="@+id/who_edit_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/where_edit_text"
                android:layout_below="@+id/where_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Describe your feeling at that time:"
                android:id="@+id/feelings_text_view"
                android:layout_below="@+id/where_edit_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/feelings_edit_text"
                android:layout_below="@+id/feelings_text_view"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/submit_label"
                android:id="@+id/submit_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/feelings_edit_text" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>